# ElevationMapping-ROS2

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
config/: elevation_map.param.yaml  post_processing.param.yaml  test_elevation_map.param.yaml  topic_name.yaml  visualization.yaml
include/elevation_mapping_ros2/: ElevationMap.hpp  ElevationMapping.hpp  RobotMotionUpdater.hpp  TypeDef.hpp
include/elevation_mapping_ros2/post_processing/: PostProcessor.hpp
include/elevation_mapping_ros2/sesnor_processing/: PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp  StructureLightProcessor.hpp
launch/: d435_pcl.launch.py  pcl.launch.py  test_realsense.launch.py
rviz2/: rviz2.rviz
scripts/: pub_zero_pose.py
src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionUpdater.cpp  elevation_mapping_node.cpp
src/composition/: compose_nodes.cpp
src/post_processing/: PostProcessor.cpp
src/sensor_processing/: PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  StereoSensorProcessor.cpp  StructureLightProcessor.cpp
test/: test_robot_motion_updater.cpp  test_sensor_processor.cpp
