<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ElevationMapping_ROS2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Siyuan.Huang@fftai.com">SiyuanHuang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_filters</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>

  <depend>filters</depend>
  <depend>message_filters</depend>
  
  <depend>Eigen3</depend>
  <depend>PCL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
